--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
+<!DOCTYPE html>
 <html>
-<h1> Esta é minha primeira página com GitHub Pages </h1>
-<p>Obrigado, GitHub!</p>
+<head>
+    <title>Minha Primeira Página com GitHub Pages</title>
+</head>
+<body>
+    <h1>Esta é minha primeira página com GitHub Pages</h1>
+    <p>Obrigado, GitHub!</p>
+    <img src="frog_teste.png" alt="Imagem do Sapo">
+</body>
 </html>
