--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Minha Primeira Página com GitHub Pages</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Gargantua Users</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body { background-color: #000; color: #ccc; }
+        a { color: #9cf; }
+        .btn-dark { background-color: #333; border-color: #333; }
+    </style>
 </head>
-<body>
-    <h1>Esta é minha primeira página com GitHub Pages</h1>
-    <p>Obrigado, GitHub!</p>
-    <img src="frog_teste.png" alt="Imagem do Sapo">
+<body class="d-flex flex-column justify-content-center align-items-center vh-100">
+    <h1 class="mb-3">Gargantua Users</h1>
+    <p class="mb-4">User management system example</p>
+    <a href="/login/" class="btn btn-dark">Login</a>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
